FIX: prevents scrollbar jumping in the emoji picker (#10749)
This was mostly due to `content-visibility: auto;` but setting the width/height is also a good practice.

--- a/app/assets/stylesheets/common/base/emoji.scss
+++ b/app/assets/stylesheets/common/base/emoji.scss
@@ -65,7 +65,6 @@ sup img.emoji {
 
     .section {
       margin-bottom: 1em;
-      content-visibility: auto;
 
       .trash-recent {
         background: none;
